--- a/sections/404.liquid
+++ b/sections/404.liquid
@@ -5,15 +5,17 @@
   https://shopify.dev/docs/storefronts/themes/architecture/templates/404
 {% endcomment %}
 
-<h1>{{ '404.title' | t }}</h1>
+<div class="text-center py-12">
+  <h1 class="text-3xl font-bold mb-4">{{ '404.title' | t }}</h1>
 
-<p>
-  {{ '404.not_found' | t }}
-</p>
+  <p class="text-gray-700 mb-6">
+    {{ '404.not_found' | t }}
+  </p>
 
-<a href="{{ routes.all_products_collection_url }}">
-  {{ '404.back_to_shopping' | t }}
-</a>
+  <a href="{{ routes.all_products_collection_url }}" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700">
+    {{ '404.back_to_shopping' | t }}
+  </a>
+</div>
 
 {% schema %}
 {
