--- a/sections/custom-section.liquid
+++ b/sections/custom-section.liquid
@@ -1,7 +1,14 @@
 <div class="custom-section full-width">
   {% if section.settings.background_image %}
     <div class="custom-section__background">
-      {{ section.settings.background_image | image_url: width: 2000 | image_tag }}
+      {% render 'image', image: section.settings.background_image, 
+        width: 2000,
+        height: 1000,
+        crop: 'center',
+        widths: '2000, 4000, 6000',
+        sizes: '(min-width: 800px) 600px, 100vw',
+        use_picture: true
+      %}
     </div>
   {% endif %}
 
@@ -23,7 +30,7 @@
     z-index: -1;
     overflow: hidden;
   }
-  .custom-section__background img {
+  .custom-section__background .image {
     position: absolute;
     width: 100%;
     height: auto;
